fix: button doesnt overlap anymore resolves #20

--- a/src/plugin.scss
+++ b/src/plugin.scss
@@ -273,7 +273,6 @@ $color-success: #3c763d;
 	color: #eee;
 	float: right;
 	font-size: 1.3em;
-	margin-top: 1.6em;
 	padding: .4em .6em;
 }
 
